Ajustes para deploy

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,31 @@ SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 # Outras configurações
 API_VERSION=v1
 CORS_ORIGIN=*
+
+# ==================== SUPABASE CONFIGURATION V2 ====================
+# Get these values from your Supabase project settings
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
+
+# ==================== API CONFIGURATION ====================
+PORT=3000
+NODE_ENV=development
+API_VERSION=v1
+
+# ==================== CORS CONFIGURATION ====================
+# For development use "*", for production use specific domains
+CORS_ORIGIN=*
+# CORS_ORIGIN=https://your-domain.vercel.app,https://your-custom-domain.com
+
+# ==================== RATE LIMITING ====================
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# ==================== OPTIONAL CONFIGURATIONS ====================
+# JWT_SECRET=your_jwt_secret_for_future_auth
+# DATABASE_URL=your_database_connection_string
+# REDIS_URL=your_redis_connection_for_caching
+
+# ==================== DEPLOYMENT ====================
+# VERCEL_URL=your-project.vercel.app
+# VERCEL_ENV=production
