--- a/package.json
+++ b/package.json
@@ -1,34 +1,49 @@
 {
   "name": "restaurant-menu-api",
   "version": "1.0.0",
-  "description": "API para gestão de menu de restaurantes",
+  "description": "Restaurant Menu Management API with Admin Dashboard",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo 'Build completed successfully'",
+    "vercel-build": "echo 'Vercel build completed'",
+    "test": "echo 'Tests would go here'",
+    "lint": "echo 'Linting would go here'"
   },
   "keywords": [
     "restaurant",
     "menu",
     "api",
+    "nodejs",
     "express",
     "supabase"
   ],
-  "author": "Seu Nome",
+  "author": "Joao Muchunja",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "@supabase/supabase-js": "^2.38.4",
-    "uuid": "^9.0.1",
-    "joi": "^17.11.0",
+    "morgan": "^1.10.0",
     "express-rate-limit": "^7.1.5",
-    "morgan": "^1.10.0"
+    "joi": "^17.11.0",
+    "dotenv": "^16.3.1",
+    "@supabase/supabase-js": "^2.38.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+    "nodemon": "^3.0.2"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/restaurant-menu-api.git"
+  },
+  "bugs": {
+    "url": "https://github.com/your-username/restaurant-menu-api/issues"
+  },
+  "homepage": "https://github.com/your-username/restaurant-menu-api#readme"
 }
