QR Code funcionando perfeitamente

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 # Outras configurações
 API_VERSION=v1
 CORS_ORIGIN=*
+
+WEBAPP_URL=https://euler-js.github.io/foodway
