Imprimindo QR COde de mesas e restaurante perfeitamente

--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,7 @@ dist
 
 # ==================== GATSBY FILES ====================
 .cache/
-public
+# public
 
 # ==================== VUEPRESS BUILD OUTPUT ====================
 .vuepress/dist
